Resoled a lot of code smells